--- a/Discord/requirements.txt
+++ b/Discord/requirements.txt
@@ -1,4 +1,12 @@
-blurple.py==0.5.5
-discord.py==1.7.3
-python-dotenv==0.20.0
-t3sf==1.0
+aiohttp==3.8.3
+aiosignal==1.2.0
+async-timeout==4.0.2
+attrs==22.1.0
+charset-normalizer==2.1.1
+discord.py==2.0.1
+frozenlist==1.3.1
+idna==3.4
+multidict==6.0.2
+python-dotenv==0.21.0
+yarl==1.8.1
+t3sf==1.1
