--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,4 @@
-myst_parser==0.17.2
-Sphinx==4.5.0
-sphinx-rtd-theme==1.0.0
-sphinx-toolbox==2.18.1
+myst_parser
+Sphinx
+sphinx-rtd-theme
+sphinx-toolbox
