--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,55 +1,4 @@
-alabaster==0.7.13
-apeye==1.3.0
-apeye-core==1.1.2
-autodocsumm==0.2.11
-Babel==2.12.1
-beautifulsoup4==4.12.2
-CacheControl==0.12.11
-certifi==2022.12.7
-charset-normalizer==3.1.0
-cssutils==2.6.0
-deprecation==2.1.0
-deprecation-alias==0.3.1
-dict2css==0.3.0
-docutils==0.19
-domdf-python-tools==3.6.1
-html5lib==1.1
-idna==3.4
-imagesize==1.4.1
-Jinja2==3.1.2
-lockfile==0.12.2
-markdown-it-py==2.2.0
-MarkupSafe==2.1.2
-mdit-py-plugins==0.3.5
-mdurl==0.1.2
-msgpack==1.0.5
-myst-parser==1.0.0
-natsort==8.3.1
-packaging==23.1
-platformdirs==3.5.0
-Pygments==2.15.1
-PyYAML==6.0
-requests==2.30.0
-ruamel.yaml==0.17.22
-ruamel.yaml.clib==0.2.7
-six==1.16.0
-snowballstemmer==2.2.0
-soupsieve==2.4.1
-Sphinx==7.0.0
-sphinx-autodoc-typehints==1.23.0
-sphinx-jinja2-compat==0.2.0
-sphinx-prompt==1.6.0
-sphinx-rtd-theme==1.2.0
-sphinx-tabs==3.4.1
-sphinx-toolbox==3.4.0
-sphinxcontrib-applehelp==1.0.4
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.1
-sphinxcontrib-jquery==4.1
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.5
-tabulate==0.9.0
-typing_extensions==4.5.0
-urllib3==2.0.2
-webencodings==0.5.1
+myst_parser==0.17.2
+Sphinx==4.5.0
+sphinx-rtd-theme==1.0.0
+sphinx-toolbox==2.18.1
