--- a/.github/workflows/publish_discord.yml
+++ b/.github/workflows/publish_discord.yml
@@ -2,8 +2,8 @@ name: Publish Docker Image for Discord
 
 on:
   push:
-    branches:
-      - master
+    branches: 
+      [ "main" ]
 
 jobs:
   build-and-publish:
