--- a/.github/workflows/publish_discord.yml
+++ b/.github/workflows/publish_discord.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       
       - name: Login to Docker Hub
         uses: docker/login-action@v1
@@ -19,7 +19,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
       
       - name: Build and Publish Docker Image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
         with:
           context: .
           file: dockerfile-discord
