--- a/.github/workflows/publish_discord.yml
+++ b/.github/workflows/publish_discord.yml
@@ -13,13 +13,13 @@ jobs:
         uses: actions/checkout@v3
       
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       
       - name: Build and Publish Docker Image
-        uses: docker/build-push-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+        uses: docker/build-push-action@v4
         with:
           context: .
           file: dockerfile-discord
